# sqlint

./: pylintrc  pyproject.toml
src/sqlint/: __init__.py  cli.py  syntax_tree.py
src/sqlint/checker/: __init__.py  base.py  checker.py  violation.py
src/sqlint/config/: __init__.py  config_loader.py
src/sqlint/formatter/: __init__.py  base.py  formatter.py  splitter.py
src/sqlint/parser/: __init__.py  base.py  keywords.py  pattern.py  token.py
